roles/pihole/files/pihole-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pihole-web
  namespace : dns
  annotations:
    metallb.universe.tf/allow-shared-ip: "pihole-shared-svc"
spec:
  selector:
    app: pihole
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name : web

---

kind: Service
apiVersion: v1
metadata:
  name: pihole-dns-udp
  namespace: dns
  annotations:
    metallb.universe.tf/allow-shared-ip: "pihole-shared-svc"
spec:
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
  - protocol: UDP
    port: 53
    targetPort: 53
    name : dns
  type: LoadBalancer 
  LoadBalancerIP: 10.10.0.231

---

kind: Service
apiVersion: v1
metadata:
  name: pihole-dns-tcp
  namespace: dns
  annotations:
    metallb.universe.tf/allow-shared-ip: "pihole-shared-svc"
spec:
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
  - protocol: TCP
    port: 53
    targetPort: 53
    name : dns
  type: LoadBalancer 
  LoadBalancerIP: 10.10.0.231
